// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton default 옵션의 아이콘 버튼을 렌더링한다. 1`] = `
<div>
  <button
    class="px-1.5 py-1.5 text-blue-500"
  >
    <svg
      aria-hidden="true"
      class="h-5 w-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton outlined 스타일의 아이콘 버튼을 렌더링한다. 1`] = `
<div>
  <button
    class="px-1.5 py-1.5 bg-white bg-opacity-20 border-blue-500 ring-blue-300 ring-opacity-40 text-blue-500 hover:bg-blue-500 hover:bg-opacity-20 hover:text-blue-500 border ring-2 rounded-lg"
  >
    <svg
      aria-hidden="true"
      class="h-5 w-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z"
      />
    </svg>
  </button>
</div>
`;
